2005-07-20  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtdm: Merge Real-Time Driver Model.

2005-07-18  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/system.h: Make all user-space readers
	include <bits/local_lim.h> to get PTHREAD_STACK_MIN defined, even
	with weird glibc setups.

	* skins/rtai/registry.h: Remove spurious external declaration of
	__rtai_obj_slots[].

	* nucleus/pipe.c (xnpipe_read): Allow the output handler to
	override the return code.
	(xnpipe_write): Always enqueue the incoming message regardless of
	the presence of an input handler. This means that such handler
	should call xnpipe_recv() to dequeue it first, if the message is
	to be routed elsewhere.

	* nucleus/timer.c (xntimer_start): Starting a timer cannot
	fail: make this routine a void one.

2005-07-17  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc64, include/nucleus/asm-ppc64: Merge the ppc64 port, a
	contribution of Taneli Vähäkangas and Heikki Lindholm.

	* include/nucleus/asm-uvm/system.h: Use native long type for
	variables passed to atomic ops for proper operations on 64bit
	archs (uvm_irqpend, uvm_irqlock).

2005-05-05  Jan Kiszka <jan.kiszka@web.de>

	* skin/rtai/task.c (rt_task_sleep_until): Properly handle clock
	wrap around case.

2005-07-16  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.8.3 (Traveler)

2005-07-16  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix/syscall.c (__pthread_set_mode_np): Fix check for
	k_tid validity.

	* arch/i386/patches: Upgrade to r12 final.

	* arch/ppc/patches: Upgrade to r8c1.

	* arch/ia64/patches: Upgrade to r8c1.

2005-07-14  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (linux_schedule_head): Prevent ptraced shadows
	from triggering the debug check: running a ptraced thread
	temporarily while it is blocked by the nucleus until it properly
	recovers from the latest stopped state, is legitimate.
	(gatekeeper_thread): Iron xnshadow_harden() -> gatekeeper
	transitions.
