@@ -232,19 +232,11 @@ asm (".L__X'%ebx = 1\n\t"
 /* Our own set of copy-to/from-user macros which must bypass
    might_sleep() checks. The caller cannot fault and is expected to
    have checked for bad range before using the copy macros, so we
-   should not have to care about the result. The apparently
-   preposterous do-while bracketing just helps silencing GCC's
-   "warn_unused_result" attribute on the related kernel macros. */
+   should not have to care about the result. */
 #define __xn_copy_from_user(task,dstP,srcP,n)  \
-do { \
-    if (__copy_from_user_inatomic(dstP,srcP,n)) \
-        ; \
-} while(0)
+    ({ int err = __copy_from_user_inatomic(dstP,srcP,n); err; })
 #define __xn_copy_to_user(task,dstP,srcP,n)  \
-do { \
-    if (__copy_to_user_inatomic(dstP,srcP,n)) \
-        ; \
-} while(0)
+    ({ int err = __copy_to_user_inatomic(dstP,srcP,n); err; })
 #define __xn_put_user(task,src,dstP)           __put_user(src,dstP)
 #define __xn_get_user(task,dst,srcP)           __get_user(dst,srcP)
 #define __xn_strncpy_from_user(task,dstP,srcP,n)    rthal_strncpy_from_user(dstP,srcP,n)
