@@ -1,5 +1,8 @@
 2005-07-20  Philippe Gerum  <rpm@xenomai.org>
 
+	* include/nucleus/asm-*/syscall.h: Propagate return values from
+	__xn_copy_from_user/__xn_copy_to_user.
+
 	* skins/rtdm: Merge Real-Time Driver Model.
 
 2005-07-18  Philippe Gerum  <rpm@xenomai.org>
